# esinxe-Random-Number-Generator

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Esinxecs.cs  LICENSE  Manual.md  README.md  RELEASING.md  SECURITY.md  SPEC_V1.md  SUPPORT.md  pyproject.toml  setup.py
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/workflows/: ci.yml  pages.yml
C/: C Manual.md  Esinxec.h  Esinxec1-0-0.c  Esinxec1-0-0.h
C#/: C# Manual.md  Esinxecs1-0-0.cs
C++/: C++ Manual.md  Esinxecpp1-0-0.h
Go/: Go Manual.md  go.mod
Go/esinxe/: esinxe.go  esinxe_test.go
JVM/: Java Kotlin Manual.md
JVM/java/: EsinxeSmokeTest.java
JVM/java/com/esinxe/: Random.java
JVM/kotlin/: Esinxe.kt  EsinxeSmokeTest.kt
JavaScript/: JavaScript TypeScript Manual.md  package-lock.json  package.json  tsconfig.json
JavaScript/src/: index.d.ts  index.js
JavaScript/test/: esinxe.test.js  types.test.ts
Python/: Esinxepy1-0-0.py  Python Manual.md
Python Version/: Esinxepy.py
Ruby/: Esinxeruby.rb  Esinxeruby1-0-0.rb  Ruby Manual.md
Rust/: Cargo.toml  Rust Manual.md
Rust/src/: lib.rs
demo/: app.js  index.html  styles.css
docs/: API.md  ARCHITECTURE.md  QUICK_STARTS.md  RNG_ANALYSIS.md  VERSIONING.md
esinxe/: __init__.py
examples/: distributed_jobs.py  procedural_world.py
scripts/: analyze_rng.py  benchmark.py  build_site.sh  check_repo.py  ci.sh  generate_vectors.py
src/esinxe/: __init__.py  _native.c
tests/: test_esinxe.py  vectors-v1.json  vectors.json
