[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "esinxe"
version = "1.0.2"
description = "Deterministic random-access number generator for procedural generation"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "License.md" }
authors = [{ name = "Danny Ward" }]
keywords = [
    "deterministic",
    "procedural-generation",
    "random",
    "random-access",
    "rng",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Games/Entertainment",
    "Topic :: Software Development :: Libraries",
]

[tool.setuptools]
packages = ["esinxe"]
