[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "esinxe"
version = "1.0.3"
description = "Deterministic random-access number generator for procedural generation"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["License.md"]
authors = [{ name = "Danny Ward" }]
keywords = [
    "deterministic",
    "procedural-generation",
    "random",
    "random-access",
    "rng",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Games/Entertainment",
    "Topic :: Software Development :: Libraries",
]

[project.urls]
Homepage = "https://github.com/dannyward630/esinxe-Random-Number-Generator"
Repository = "https://github.com/dannyward630/esinxe-Random-Number-Generator"
Issues = "https://github.com/dannyward630/esinxe-Random-Number-Generator/issues"

[tool.setuptools.packages.find]
where = ["src"]
